wip:pixel perfection

--- a/src/index.html
+++ b/src/index.html
@@ -296,7 +296,9 @@
             the It is a long established .t is a long established fact that a
             reader will be distracted by the readable content of .
           </p>
-          <button class="btn btn-warning rounded-1 px-lg-3 border-0 mt-lg-4">
+          <button
+            class="btn btn-warning rounded-1 px-lg-3 border-0 mt-lg-4 hero-btn"
+          >
             Learn More
           </button>
         </div>
@@ -369,7 +371,7 @@
       </div>
     </div>
     <div
-      class="py-2 py-md-5 container-fluid text-center choose-container"
+      class="py-2 py-md-5 container-fluid text-lg-center choose-container"
       style="background-color: #fafafa"
     >
       <h2>Why You Should <span style="color: #6f77f1">Choose Us</span></h2>
@@ -471,7 +473,7 @@
         <div class="col-12 col-lg-6 py-5">
           <img src="./assets/images/need.png" class="img-fluid need-hero-img" />
         </div>
-        <div class="col-12 col-lg-6 text-center text-lg-start">
+        <div class="col-12 col-lg-6 text-start">
           <p class="need-heading">
             You make ask what<br />
             SEO & why do you <span style="color: #6f77f1">Need It?</span>
@@ -579,14 +581,14 @@
             <input
               type="text"
               placeholder="Web URL"
-              class="form-control border-0 w-100 w-lg-auto mb-2 mb-lg-0 rounded-0 speed-input"
+              class="form-control border-0 mb-2 mb-lg-0 rounded-0 speed-input"
               style="background-color: #f2f2f2"
             />
             <div style="width: 1px; background-color: black"></div>
             <input
               type="text"
               placeholder="Email Address"
-              class="form-control border-0 w-100 w-lg-auto mb-2 mb-lg-0 rounded-0 speed-input"
+              class="form-control border-0 mb-2 mb-lg-0 rounded-0 speed-input"
               style="background-color: #f2f2f2"
             />
 
@@ -878,8 +880,8 @@
         Subscribe & find the perfect Cosmetics
       </p>
       <p
-        class="subscribe-caption"
-        style="margin-bottom: 20px; font-size: 16px; color: #828282"
+        class="mb-5 mb-lg-auto subscribe-caption"
+        style="font-size: 16px; color: #828282"
       >
         Enter your email and get updated new products & news
       </p>
@@ -887,9 +889,12 @@
         class="d-flex w-100 justify-content-center gap-2 flex-column flex-lg-row column-gap-1 input-section"
         style="height: 57px"
       >
-        <input class="rounded border-1 subscribe-input" placeholder="Name" />
         <input
-          class="rounded border-1 subscribe-input"
+          class="form-control rounded border-1 subscribe-input1"
+          placeholder="Name"
+        />
+        <input
+          class="form-control rounded border-1 subscribe-input2"
           placeholder="Email Address"
         />
         <button
@@ -909,7 +914,7 @@
           </h4>
         </div>
 
-        <ul class="nav justify-content-center mb-4 gap-5 flex-wrap">
+        <ul class="nav justify-content-center mb-lg-4 gap-lg-5 flex-wrap">
           <li class="nav-item">
             <a class="nav-link px-3" style="color: black" href="#">Overview</a>
           </li>
